fixed overflow bug

--- a/src/App.css
+++ b/src/App.css
@@ -32,6 +32,7 @@ a:visited {
   color: black;
 }
 
+html,
 body {
   width: 100%;
 }
