--- a/src/Home/Contact.module.css
+++ b/src/Home/Contact.module.css
@@ -29,6 +29,7 @@
   margin-bottom: 5vh;
   display: flex;
   align-items: center;
+  justify-content: space-between;
 }
 
 .social {
@@ -37,7 +38,6 @@
   flex-direction: column;
   align-items: center;
   padding: 20px;
-  margin: 0 100px;
 }
 
 .social h2 {
